# absenteeism-etl

./: .gitignore  Makefile  README.md  pyproject.toml
app/: cli.py
app/core/: logger.py
app/core/interfaces/: extractor.py  loader.py  transformer.py
app/extractors/: excel_extractor.py
app/loaders/: excel_loader.py
app/pipeline/: etl_pipeline.py
app/transformers/: default_transformer.py
app/utils/: absenteeism_generator.py
scripts/: run_pipeline.py
tests/: test_default_transformer.py  test_excel_extractor.py  test_excel_loader.py
